# bicep-docs

./: .commitlintrc.js  .dockerignore  .gitignore  .pre-commit-config.yaml  .releaserc.json  .rules  CHANGELOG.adoc  CONTRIBUTING.adoc  Cargo.toml  Dockerfile  README.adoc  README.md  SECURITY.md  deny.toml  package-lock.json  package.json  rustfmt.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  copilot-setup-steps.yml  release.yml
docs/: API.adoc  EXAMPLES.adoc  FEATURES.adoc  LOCALIZATION.md  PRE_COMMIT.adoc  SEMANTIC_VERSIONING.adoc
docs/ast-export/: README.adoc  TUTORIAL.adoc
examples/: Makefile  README.adoc  README.md  TUTORIAL.adoc  TUTORIAL.md  bicepconfig.json
examples/single-file/: Makefile  README.adoc  example.bicep  example_tree.yaml  output-default.adoc  output-default.md  output-emoji.adoc  output-emoji.md  output-list.adoc  output-list.md  output-markdown-all-options.md  output-markdown-default.md  output-markdown-emoji.md  output-markdown-exclude-empty.md  output-table.adoc  output-table.md  output.adoc  output.md  output.yaml  spec.yaml
locales/: de.yml  en.yml  es.yml  fr.yml  ja.yml  zh.yml
scripts/: test-release.sh
src/: lib.rs  localization.rs  types.rs
src/exports/: asciidoc.rs  json.rs  markdown.rs  mod.rs  yaml.rs
src/exports/utils/: common.rs  formatting.rs  mod.rs
src/locales/: de.json  en.json  es.json  fr.json  ja.json  zh.json
src/localization/: locale.rs  mod.rs  translations.rs
src/parsing/: functions.rs  imports.rs  mod.rs  modules.rs  outputs.rs  parameters.rs  resources.rs  types.rs  variables.rs
src/parsing/utils/: decorators.rs  mod.rs  text.rs  types.rs  values.rs
tests/: README.adoc  README.md  TEST_PLAN.adoc  TEST_PLAN.md  test_export.rs  test_markdown.rs  test_parsing.rs
tests/parsing/: README.adoc  README.md  decorators.bicep  exports.bicep  functions.bicep  imports.bicep  metadata.bicep  modules.bicep  outputs.bicep  parameters.bicep  resources.bicep  types.bicep  variables.bicep
