[package]
name = "bicep-docs"
version = "0.1.0"
edition = "2021"
description = "Documentation generator for Azure Bicep files"
authors = ["Jerome Brown <Jerome@SoliDeoGloria.tech>"]
license = "MPL-2.0"
default-run = "bicep-docs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
indexmap = { version = "2.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
serde_with = "3.0"
tracing = "0.1"
tree-sitter = "0.25"
tree-sitter-bicep = { git = "https://github.com/tree-sitter-grammars/tree-sitter-bicep.git", tag = "v1.1.0" }

[[bin]]
name = "bicep-docs"
path = "src/bin/bicep_docs.rs"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
opt-level = "z"
